--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home Page</title>
+    <title>About Page</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -27,7 +27,7 @@
       <a href="javascript:void(0);" class="icon" onclick="toggleNavbar()">☰</a>
     </div>
     <div class="container">
-      <img src="raidengif3.gif" alt="ident.html" class="img2" />
+      <img src="raidengif3.gif" alt="" class="img2" />
       <h1>This Is About Me :</h1>
       <h3>Name : Arkana Byan Syahputra</h3>
       <h3>Age : 14</h3>
