--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home Page</title>
+    <title>Contact Page</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -27,7 +27,7 @@
       <a href="javascript:void(0);" class="icon" onclick="toggleNavbar()">☰</a>
     </div>
     <div class="container">
-      <img src="raidengif2.gif" alt="ident.html" />
+      <img src="raidengif2.gif" alt="" />
       <h1>Contact Me Here !</h1>
       <h3>E-Mail : yannzxr@gmail.com</h3>
       <h3>Instagram : @noobbdevelop</h3>
