--- a/index.html
+++ b/index.html
@@ -21,15 +21,22 @@
         />
         <span class="website-name">Yanzz Website</span>
       </div>
+      <a href="index.html">HOME</a>
       <a href="contact.html">CONTACT ME</a>
       <a href="about.html">ABOUT ME</a>
-      <a href="index.html">HOME</a>
       <a href="javascript:void(0);" class="icon" onclick="toggleNavbar()">☰</a>
     </div>
     <div class="container">
-      <img src="raidengif.gif" alt="ident.html" />
+      <img src="raidengif.gif" alt="" />
       <h1>Welcome !</h1>
-      <h3>Website ini diciptakan oleh Arkana Byan Syahputra hanya sekedar iseng/gabut. Sekaligus untuk melatih skill coding website saya. Awalnya saya kepikiran membuat website ini saat perjalanan pulang dari sekolah, pada hari Jum'at, lebih tepatnya tanggal 09 - 05 - 2025, dikerjakan dari pukul -+ 11:30 WIB ( Sebelum Melaksanakan Shalat Jum'at ) dan selesai pada 13:50.</h3>
+      <h3>
+        Website ini diciptakan oleh Arkana Byan Syahputra hanya sekedar
+        iseng/gabut. Sekaligus untuk melatih skill coding website saya. Awalnya
+        saya kepikiran membuat website ini saat perjalanan pulang dari sekolah,
+        pada hari Jum'at, lebih tepatnya tanggal 09 - 05 - 2025, dikerjakan dari
+        pukul -+ 11:30 WIB ( Sebelum Melaksanakan Shalat Jum'at ) dan selesai
+        pada 13:50.
+      </h3>
     </div>
     <script src="script.js"></script>
   </body>
